src/objects/Glxy_ProjectAgency__c.object
<CustomObject>
    <description>This table contains the Agency Space Assignments (ASA) data for Projects.</description>
    <fields>
        <fullName>ABCode__c</fullName>
        <formula>PBSABCode__r.AB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>PBSABCode__r.Agency_Bureau_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseSurfaceParkingSpace__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewASA__c</fullName>
        <inlineHelpText>ASA (OA) moving forward in the Lease once this respective action is executed.</inlineHelpText>
        <label>New ASA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewAntennas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Antennas</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewIASquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewLand__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Land</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewNOASquarefeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewSquarefeet__c</fullName>
        <formula>NewIASquareFeet__c +  NewNOASquarefeet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Square feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldASA__c</fullName>
        <label>Old ASA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldAntennasRollUp__c</fullName>
        <inlineHelpText>Current Antennas in the Lease.</inlineHelpText>
        <label>Old Antennas *</label>
        <summarizedField>Glxy_ProjectRequestASA__c.Old_Antennas__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectRequestASA__c.ProjectAgencyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldBaseStructuredParkingSpacesRollup__c</fullName>
        <inlineHelpText>Current Structured Parking Spaces in the Lease.</inlineHelpText>
        <label>Old Base Structured Parking Spaces *</label>
        <summarizedField>Glxy_ProjectRequestASA__c.OldBaseStructuredParkingSpaces__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectRequestASA__c.ProjectAgencyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldBaseSurfaceParkingSpacesRollUp__c</fullName>
        <inlineHelpText>Current Surface Parking Spaces in the Lease.</inlineHelpText>
        <label>Old Base Surface Parking Spaces *</label>
        <summarizedField>Glxy_ProjectRequestASA__c.OldBaseSurfaceParkingSpaces__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectRequestASA__c.ProjectAgencyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldLandRollUp__c</fullName>
        <label>Old Land *</label>
        <summarizedField>Glxy_ProjectRequestASA__c.Old_Land__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectRequestASA__c.ProjectAgencyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldSquareFeetRollup__c</fullName>
        <inlineHelpText>Current Square Feet that the Lease occupies.</inlineHelpText>
        <label>Old Square Feet *</label>
        <summarizedField>Glxy_ProjectRequestASA__c.OldSquareFeet__c</summarizedField>
        <summaryForeignKey>Glxy_ProjectRequestASA__c.ProjectAgencyID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PBSABCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PBS AB Code</label>
        <referenceTo>PBS_AB_Code__c</referenceTo>
        <relationshipLabel>Project Agencies</relationshipLabel>
        <relationshipName>Project_Agencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <referenceTo>Glxy_LeaseProjects__c</referenceTo>
        <relationshipName>Project_Agencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <externalId>true</externalId>
        <label>RequestID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RexusNewIASqFt__c</fullName>
        <label>Rexus New IA SqFt</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RexusNewNOASqFt__c</fullName>
        <label>Rexus New NOA Sqft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <formula>ProjectNumber__r.TeamCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Code</label>
        <type>Text</type>
    </fields>
    <label>Project Agency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectNumber__c</columns>
        <columns>ABCode__c</columns>
        <columns>NewASA__c</columns>
        <columns>NewSquarefeet__c</columns>
        <columns>OldSquareFeetRollup__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Project Agency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Agencies</pluralLabel>
    <recordTypes>
        <fullName>Placeholder</fullName>
        <active>true</active>
        <description>Record entered in Galaxy</description>
        <label>Placeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rexus</fullName>
        <active>true</active>
        <description>Record imported from Rexus</description>
        <label>Rexus</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>